crux-mir/test/symb_eval/crux/early_fail.good
test early_fail/<DISAMB>::fail1[0]: [Crux] Attempting to prove verification conditions.
FAILED
test early_fail/<DISAMB>::fail2[0]: [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- early_fail/<DISAMB>::fail1[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/core/src/panic.rs:62:9: 62:73 !test/symb_eval/crux/early_fail.rs:11:5: 11:20: error: in early_fail/<DISAMB>::fail1[0]
[Crux]   panicking::panic_fmt, called from early_fail/<DISAMB>::fail1[0]

---- early_fail/<DISAMB>::fail2[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crux/early_fail.rs:17:5: 17:29: error: in early_fail/<DISAMB>::fail2[0]
[Crux]   MIR assertion at test/symb_eval/crux/early_fail.rs:17:5:
[Crux]   	x == 0

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 2
[Crux]   Proved: 0
[Crux]   Disproved: 2
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
